--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/core": "^7.26.0",
     "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.90.0",
     "@tanstack/react-query": "^5.90.16",
     "babel-preset-expo": "~54.0.9",
@@ -33,6 +34,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
